# bazel-cant-find-python

./: .tool-versions  BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/: BUILD.bazel
